# qr-pdf-embed

./: main.py  pyproject.toml
