[tool.poetry]
name = "qr-code-pdf-embed"
version = "0.1.0"
description = ""
authors = ["Vincent Engelmann <vincent.engelmann1@gmail.com>"]
readme = "README.md"
packages = [{include = "qr_code_pdf_embed"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.21.1"
pdfplumber = "^0.7.6"
pypdf2 = "^3.0.1"
qrcode = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
